# OSApplyTrack

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.poller  README.md  SPRINTS.md  docker-compose.yml  plan.md  pyproject.toml
.forgejo/workflows/: audit.yml
.github/workflows/: ci.yml  release.yml
api/: ApplyTrack.slnx
api/ApplyTrack.Api/: ApplyTrack.Api.csproj  Dockerfile  Program.cs  TimeoutConfiguration.cs  appsettings.Development.json  appsettings.json
api/ApplyTrack.Api.Tests/: AccountEndpointTests.cs  ApplyTrack.Api.Tests.csproj  AuthEndpointTests.cs  CapturingEmailSender.cs  ConfigurationTests.cs  CoverLetterDrafterTests.cs  EndpointContractTests.cs  HealthEndpointTests.cs  MaterialsEndpointTests.cs  MigrationScaffoldTests.cs  PostgresFixture.cs  RateLimitTests.cs  RepoTests.cs  ScrapeTests.cs  SecretProtectorTests.cs  SharedExportTests.cs  StubLlmClient.cs  TestAuth.cs
api/ApplyTrack.Api/Auth/: AuthCookie.cs  EmailOptions.cs  IEmailSender.cs  SmtpEmailSender.cs  TenantContext.cs  TenantMiddleware.cs  Tokens.cs
api/ApplyTrack.Api/Crypto/: SecretProtector.cs
api/ApplyTrack.Api/Data/: AppExceptions.cs  AppFields.cs  AppSummary.cs  ApplicationRepo.cs  BlacklistRepo.cs  CoverLetterRepo.cs  Criteria.cs  CriteriaRepo.cs  LlmSettingsRepo.cs  MagicTokenRepo.cs  MarkdownCodec.cs  Migrator.cs  PollRequestRepo.cs  ResilientDbConnection.cs  Resume.cs  ResumeRepo.cs  SessionRepo.cs  Slug.cs  Tenant.cs  UserRepo.cs
api/ApplyTrack.Api/Endpoints/: AccountEndpoints.cs  AppsEndpoints.cs  AuthEndpoints.cs  BlacklistEndpoints.cs  CriteriaEndpoints.cs  MaterialsEndpoints.cs  ScrapeEndpoints.cs
api/ApplyTrack.Api/Llm/: ILlmClient.cs  LlmConfig.cs  OpenAiCompatibleLlmClient.cs
api/ApplyTrack.Api/Materials/: CoverLetterDrafter.cs
api/ApplyTrack.Api/Middleware/: ApiExceptionMiddleware.cs  SecurityHeadersMiddleware.cs
api/ApplyTrack.Api/Migrations/: 0000_extensions.sql  0001_applications.sql  0002_search_profiles.sql  0003_blacklist.sql  0004_users.sql  0005_magic_tokens.sql  0006_sessions.sql  0007_seen.sql  0008_poll_requests.sql  (+5 more)
deploy/quadlet/: README.md  applytrack-api.container  applytrack-db.container  applytrack-pgdata.volume  applytrack-poller.container  applytrack.network
docker/: poller-entrypoint.sh
docs/: architecture.drawio
src/applytrack/: __init__.py  cli.py  criteria.py  db.py  importer.py  linkcheck.py  poll.py  store.py  worker.py
tests/: test_cli.py  test_criteria.py  test_fetchers.py  test_importer.py  test_linkcheck.py  test_poll.py
(+7 files in other folders)
