[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "applytrack-poller"
version = "1.2.1"
description = "Discovery poller for OSApplyTrack — fetches and scores remote job leads into shared Postgres."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Aaron K. Clark" }]
dependencies = [
  "pyyaml>=6.0",
  "httpx>=0.27",
  "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "mypy>=1.10", "pytest>=8.0", "types-PyYAML"]

[project.scripts]
applytrack = "applytrack.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/applytrack"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
